# cross_model_generalization_Deception_Detection_CSE449B

./: README.md  pyproject.toml  requirements.txt
configs/: train_example.yaml
notebooks/: cross_domain_deception_pipeline.ipynb
scripts/: prepare_data.py  run_cross_domain.py
src/deception/: __init__.py  data.py  evaluate.py  model.py  train.py
